# Robot_Human_Interfase_v0

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Robot_Human_Interfase_m0/: __init__.py  dataset.py  features.py  plots.py
Robot_Human_Interfase_m0/modeling/: predict.py  train.py
models/: DecisionTreeClassifier_emg_v0.pkl  DecisionTreeClassifier_emg_v1.pkl  DecisionTreeClassifier_emg_v2_entropy.pkl  DecisionTreeClassifier_emg_v3_entropy.pkl  random_forest_emg.pkl  random_forest_emg_v2.pkl
notebooks/: 01-procesamiento-y-features.ipynb  02-feature-engineering-Wavelet.ipynb  02-feature-engineering-graph.ipynb  02-feature-engineering.ipynb  03-modeling-baseline.ipynb  03-modeling-desiciontree.ipynb  04-evaluacion-nuevos-datos.ipynb  05-modelo-robusto-multisugeto.ipynb  05-modelo-robusto-multisujeto.ipynb  VisualizeData.ipynb
